--- a/.github/workflows/publish2devto.yml
+++ b/.github/workflows/publish2devto.yml
@@ -1,10 +1,17 @@
-steps:
-- uses: actions/checkout@v4
-- name: Publish articles on dev.to
-  uses: sinedied/publish-devto@v2
-  with:
-    devto_key: ${{ secrets.DEVTO_TOKEN }}
-    files: 'blog/**/*.md'
-    branch: main 
-    conventional_commits: true
-    dry_run: false
+on:
+  push:
+    branches:
+      - 'main'
+      
+jobs: 
+  runs-on: ubuntu-latest
+  steps:
+  - uses: actions/checkout@v4
+  - name: Publish articles on dev.to
+    uses: sinedied/publish-devto@v2
+    with:
+      devto_key: ${{ secrets.DEVTO_TOKEN }}
+      files: 'blog/**/*.md'
+      branch: main 
+      conventional_commits: true
+      dry_run: false
