--- a/.github/workflows/publish2devto.yml
+++ b/.github/workflows/publish2devto.yml
@@ -14,6 +14,6 @@ jobs:
       id: publish_devto
       with:
         devto_key: ${{ secrets.DEVTO_TOKEN }}
-        files: 'blog/protocolos-de-rede/**/**/*.md'
+        files: 'blog/protocolos-de-rede/ipv4/*.md'
         branch: main
         conventional_commits: true
