--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: networking de quebradinha
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Eu sou só um cara que já tentou quase tudo e hoje paga as contas graças aos modelos OSI e TCP/IP
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://bl4cktux89.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: bl4cktux89
+github_username:  bl4cktux89
 
 # Build settings
 theme: minima
