--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,10 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
+exclude:
+- .obsidian/
+- ORGANIZAR/
+- notas-rapidas/
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
